# Slicer-PySLM

./: .gitignore  .gitmodules  LICENSE  README.md  _fix_mainwindow.py  main.py  pyproject.toml
src/app/: slicer_service.py
src/application/: scene_manager.py  slicer_service.py
src/application/dtos/: slice_request.py
src/application/use_cases/: slice_part.py
src/domain/: interfaces.py  models.py
src/infra/adapters/: pyslm_adapter.py  pyslm_adopter.py
src/infrastructure/adapters/: opc_ua_adapter.py  pyslm_adapter.py
src/infrastructure/persistence/: file_repository.py
src/infrastructure/repositories/: asset_loader.py
src/presentation/: dialogs.py  main_window.py  theme.py  viewport_manager.py  viewport_widget.py  workers.py
src/presentation/gui/: app.py
