[tool.poetry]
name = "slicer-pyslm"
version = "0.1.0"
description = "Industrial SLM Slicer using Clean Architecture and PySLM"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pyslm = "^0.6.0"
trimesh = "^4.0.0"
numpy = "^1.24.0"
dearpygui = "^1.10.0"
opcua = "^0.98.13"
pydantic = "^2.0.0"
python-docx = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
